--- a/Projects/boston_housing/boston_housing.ipynb
+++ b/Projects/boston_housing/boston_housing.ipynb
@@ -154,9 +154,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-i expect a home that has a RM value of 7 to cost more than a home with a RM of 6\n",
-    "-i expect a home with a LSTAT value of 15 to cost less than a home with a LSTAT value of 20 \n",
-    "-i expect a home with a PTRATIO of 10 to cost more than a home with PTRATIO of value 15"
+    "-i expect a home that has a RM value of 7 to cost more than a home with a RM of 6 because the more rooms the expensive the house gets.\n",
+    "-i expect a home with a LSTAT value of 15 to cost less than a home with a LSTAT value of 20 because the poorer the area the less desirable it is to live in.\n",
+    "-i expect a home with a PTRATIO of 10 to cost more than a home with PTRATIO of value 15 because the less the student-teacher ratio is the higher the quality of educatiom."
    ]
   },
   {
@@ -378,8 +378,8 @@
    "metadata": {},
    "source": [
     "-second mode, max depth of 3\n",
-    "-the test score and training score converge more to eachother\n",
-    "-no"
+    "-the test score and training score converge more to eachother that they will touch each other after a long time.\n",
+    "-no, they would converege to each other but it will be within the same range of score which won't make a difference."
    ]
   },
   {
@@ -429,8 +429,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-high bias\n",
-    "-high variance"
+    "-high bias, because the score is very bad and the test and training score and close to eachother\n",
+    "-high variance, because the score of the training score is very high while the testing score is very low and away from the training score."
    ]
   },
   {
@@ -477,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-the grid search calculates the f1 score of a model using different parameters and returns the best model.\n",
+    "-grid search takes some parameters like : 1-model type, 2-parameters, 3-scoring function: model type is the model i choose to be evaluated, the parameters are the parameters i need to tune by grid search, the scoring function is the function i give to the gridsearch to evaluate the model with like (f1score or r2score), then it gives us the best parameters from the set of parameters given to it according to the scoring function.\n",
     "-it is used by giving alot of parameters to a model instead of trying each parameter by hand"
    ]
   },
@@ -624,7 +624,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Parameter 'max_depth' is 4 for the optimal model.\n"
+    "Parameter 'max_depth' is 4 for the optimal model.\n",
+    "and the max depth provided by the learning algorithim is worse, because it's not accurate.\n"
    ]
   },
   {
@@ -681,7 +682,8 @@
     "Predicted selling price for Client 1's home: $403,025.00\n",
     "Predicted selling price for Client 2's home: $237,478.72\n",
     "Predicted selling price for Client 3's home: $931,636.36\n",
-    "-no"
+    "-no, because taking a look at for example client number 2 :having a home price of 237 thousand puts him at a high cost than the minimum price of houses in data while having worse features:less rooms, higher LSTAT rate and PTRATIO higher rate\n",
+    "-client number 3:while this client has a price of 931 thousand which is less than the most expensive house in the training data but yet having : lower LSTAT rate and lower PTRATIO rate\n"
    ]
   },
   {
@@ -697,7 +699,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -744,9 +748,10 @@
    "source": [
     "-inflation is very important\n",
     "-no, yes everything should be factored in calculating a house's price\n",
+    "-no, because in our example it sold a bad house for more than it should and a good house for less than it should\n",
+    "-no, because the data would be different and will include other factors than are not in the other city\n",
     "-no\n",
-    "-no\n",
-    "-no"
+    "-no, it should not be used in real world because : 1- it's not robust, 2- it uses too little data and data features, 3-it uses features that should not affect the price that much."
    ]
   },
   {
