--- a/Projects/dog-project-master/dog_app.ipynb
+++ b/Projects/dog-project-master/dog_app.ipynb
@@ -1138,10 +1138,14 @@
    ],
    "source": [
     "### TODO: Define your architecture.\n",
+    "#used inception because its supposedly the most computationly efficient method of those methods\n",
     "inception_model = Sequential()\n",
+    "#just taking the global average pool at the end of the network and using it as an input for my data set\n",
     "inception_model.add(GlobalAveragePooling2D(input_shape=train_InceptionV3.shape[1:]))\n",
+    "#using a dense function so i can use a drop out to overcome over fitting\n",
     "inception_model.add(Dense(250, activation='relu'))\n",
     "inception_model.add(Dropout(0.5))\n",
+    "#changing the output of the model to 133 which is equal to the number of dog breeds.\n",
     "inception_model.add(Dense(133, activation='softmax'))\n",
     "                    \n",
     "inception_model.summary()"
@@ -1430,7 +1434,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#the output is better than expected in predicting dogg breeds, but bad in detecting human faces, \n",
+    "#to improve the alogorithim, we can increase the human training data, try to improve the model's architecture and increase the epochs"
+   ]
   },
   {
    "cell_type": "code",
