--- a/Projects/dog-project-master/dog_app.ipynb
+++ b/Projects/dog-project-master/dog_app.ipynb
@@ -313,6 +313,17 @@
     "## (Optional) TODO: Report the performance of another  \n",
     "## face detection algorithm on the LFW dataset\n",
     "### Feel free to use as many code cells as needed.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#of course it's not reasonable as we have to give the algorithim alot of angles of each single face, i think a better solution\n",
+    "#is to use CNNs\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "import numpy as np\n",
     "import cv2 as cv\n",
     "face_cascade = cv.CascadeClassifier('haarcascade_frontalface_default.xml')\n",
@@ -638,11 +649,17 @@
     "print(\"1\")\n",
     "model = Sequential()\n",
     "#model.add(Conv2D(64, kernel_size=3, activation='relu', input_shape=(225,225,16)))\n",
+    "\n",
+    "#i used the first conv layer to give it my input\n",
     "model.add(Conv2D(filters = 64, kernel_size = (5,5), strides = (2,2),activation = 'relu',\n",
     "                 input_shape = (224, 224, 3)))\n",
+    "#then i used pooling to reduce the computational and spatial parameters of the network\n",
     "model.add(MaxPooling2D(pool_size=(3, 3), strides=None))\n",
+    "#then i used another conv layer to increase accuracy\n",
     "model.add(Conv2D(filters = 32, kernel_size = (5,5), strides = (4,4),activation = 'relu'))\n",
+    "#then another pooling layer to decrease the spatial parameter\n",
     "model.add(MaxPooling2D(pool_size=(3, 3), strides=None))\n",
+    "#then adding a global aveerage pool and dense layer to add a drop out to avoid overfitting\n",
     "model.add(GlobalAveragePooling2D())\n",
     "model.add(Dense(200, activation='relu'))\n",
     "model.add(Dropout(0.3))\n",
@@ -1147,7 +1164,11 @@
     "inception_model.add(Dropout(0.5))\n",
     "#changing the output of the model to 133 which is equal to the number of dog breeds.\n",
     "inception_model.add(Dense(133, activation='softmax'))\n",
-    "                    \n",
+    "\n",
+    "#transfer learning of the inception model worked because the inception model was already trained on a similar task with a good \n",
+    "#architecure, while the first model had far less accuracy because the model wasn't well trained and had much worse architecture.\n",
+    "\n",
+    "\n",
     "inception_model.summary()"
    ]
   },
