--- a/Projects/customer_segments/customer_segments.ipynb
+++ b/Projects/customer_segments/customer_segments.ipynb
@@ -35,11 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wholesale customers dataset has 440 samples with 6 features each.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import libraries necessary for this project\n",
     "import numpy as np\n",
@@ -65,6 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "## Data Exploration\n",
     "In this section, you will begin exploring the data through visualizations and code to understand how each feature is related to the others. You will observe a statistical description of the dataset, consider the relevance of each feature, and select a few sample data points from the dataset which you will track through the course of this project.\n",
     "\n",
@@ -73,11 +80,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicatessen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>440.000000</td>\n",
+       "      <td>440.000000</td>\n",
+       "      <td>440.000000</td>\n",
+       "      <td>440.000000</td>\n",
+       "      <td>440.000000</td>\n",
+       "      <td>440.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>12000.297727</td>\n",
+       "      <td>5796.265909</td>\n",
+       "      <td>7951.277273</td>\n",
+       "      <td>3071.931818</td>\n",
+       "      <td>2881.493182</td>\n",
+       "      <td>1524.870455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>12647.328865</td>\n",
+       "      <td>7380.377175</td>\n",
+       "      <td>9503.162829</td>\n",
+       "      <td>4854.673333</td>\n",
+       "      <td>4767.854448</td>\n",
+       "      <td>2820.105937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3127.750000</td>\n",
+       "      <td>1533.000000</td>\n",
+       "      <td>2153.000000</td>\n",
+       "      <td>742.250000</td>\n",
+       "      <td>256.750000</td>\n",
+       "      <td>408.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>8504.000000</td>\n",
+       "      <td>3627.000000</td>\n",
+       "      <td>4755.500000</td>\n",
+       "      <td>1526.000000</td>\n",
+       "      <td>816.500000</td>\n",
+       "      <td>965.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>16933.750000</td>\n",
+       "      <td>7190.250000</td>\n",
+       "      <td>10655.750000</td>\n",
+       "      <td>3554.250000</td>\n",
+       "      <td>3922.000000</td>\n",
+       "      <td>1820.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>112151.000000</td>\n",
+       "      <td>73498.000000</td>\n",
+       "      <td>92780.000000</td>\n",
+       "      <td>60869.000000</td>\n",
+       "      <td>40827.000000</td>\n",
+       "      <td>47943.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Fresh          Milk       Grocery        Frozen  \\\n",
+       "count     440.000000    440.000000    440.000000    440.000000   \n",
+       "mean    12000.297727   5796.265909   7951.277273   3071.931818   \n",
+       "std     12647.328865   7380.377175   9503.162829   4854.673333   \n",
+       "min         3.000000     55.000000      3.000000     25.000000   \n",
+       "25%      3127.750000   1533.000000   2153.000000    742.250000   \n",
+       "50%      8504.000000   3627.000000   4755.500000   1526.000000   \n",
+       "75%     16933.750000   7190.250000  10655.750000   3554.250000   \n",
+       "max    112151.000000  73498.000000  92780.000000  60869.000000   \n",
+       "\n",
+       "       Detergents_Paper  Delicatessen  \n",
+       "count        440.000000    440.000000  \n",
+       "mean        2881.493182   1524.870455  \n",
+       "std         4767.854448   2820.105937  \n",
+       "min            3.000000      3.000000  \n",
+       "25%          256.750000    408.250000  \n",
+       "50%          816.500000    965.500000  \n",
+       "75%         3922.000000   1820.250000  \n",
+       "max        40827.000000  47943.000000  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Display a description of the dataset\n",
     "display(data.describe())"
@@ -93,14 +230,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chosen samples of wholesale customers dataset:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicatessen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12669</td>\n",
+       "      <td>9656</td>\n",
+       "      <td>7561</td>\n",
+       "      <td>214</td>\n",
+       "      <td>2674</td>\n",
+       "      <td>1338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10253</td>\n",
+       "      <td>1114</td>\n",
+       "      <td>3821</td>\n",
+       "      <td>397</td>\n",
+       "      <td>964</td>\n",
+       "      <td>412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>16448</td>\n",
+       "      <td>6243</td>\n",
+       "      <td>6360</td>\n",
+       "      <td>824</td>\n",
+       "      <td>2662</td>\n",
+       "      <td>2005</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Fresh  Milk  Grocery  Frozen  Detergents_Paper  Delicatessen\n",
+       "0  12669  9656     7561     214              2674          1338\n",
+       "1  10253  1114     3821     397               964           412\n",
+       "2  16448  6243     6360     824              2662          2005"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# TODO: Select three indices of your choice you wish to sample from the dataset\n",
-    "indices = []\n",
+    "indices = [0,15,300]\n",
     "\n",
     "# Create a DataFrame of the chosen samples\n",
     "samples = pd.DataFrame(data.loc[indices], columns = data.keys()).reset_index(drop = True)\n",
@@ -132,7 +346,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "sample 0 :cafe\n",
+    "sample 1 :university student\n",
+    "sample 2 :restaurant\n",
+    "not sure if i got this question right or not, but i think this sample doesn't help me."
    ]
   },
   {
@@ -152,24 +370,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.18256262332008344"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
     "# TODO: Make a copy of the DataFrame, using the 'drop' function to drop the given feature\n",
-    "new_data = None\n",
-    "\n",
+    "new_data=data.copy()\n",
+    "new_data.drop(['Frozen'], axis=1, inplace = True)\n",
     "# TODO: Split the data into training and testing sets(0.25) using the given feature as the target\n",
     "# Set a random state.\n",
-    "X_train, X_test, y_train, y_test = (None, None, None, None)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(new_data, data['Frozen'], test_size=0.25, random_state=1)\n",
     "\n",
     "# TODO: Create a decision tree regressor and fit it to the training set\n",
-    "regressor = None\n",
+    "regressor = DecisionTreeRegressor(random_state=1)\n",
+    "regressor.fit(X_train,y_train)\n",
     "\n",
     "# TODO: Report the score of the prediction using the testing set\n",
-    "score = None"
+    "score = regressor.score(X_test,y_test)\n",
+    "score"
    ]
   },
   {
@@ -189,7 +420,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "Frozen\n",
+    "-0.18\n",
+    "no, because it has a very low score"
    ]
   },
   {
@@ -202,11 +436,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pandas' has no attribute 'scatter_matrix'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-84-f3f536cd9627>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Produce a scatter matrix for each pair of features in the data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscatter_matrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malpha\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfigsize\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m14\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdiagonal\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'kde'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'scatter_matrix'"
+     ]
+    }
+   ],
    "source": [
     "# Produce a scatter matrix for each pair of features in the data\n",
     "pd.scatter_matrix(data, alpha = 0.3, figsize = (14,8), diagonal = 'kde');"
@@ -834,7 +1078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
