--- a/Projects/capstone/final_project.ipynb
+++ b/Projects/capstone/final_project.ipynb
@@ -2,42 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test MSE: 0.001\n",
-      "[17.869  17.91   17.9    17.9    17.9    17.83   17.8255 17.9    17.87\n",
-      " 17.88   17.875  17.875  17.8835 17.88   17.88   17.87   17.87   17.8622\n",
-      " 17.888  17.915  17.895  17.895  17.9    17.9    17.8965 17.9163 17.87\n",
-      " 17.87   17.87   17.87   17.8295 17.9    17.89   17.89   17.83   17.83\n",
-      " 17.8315 17.945  17.91   17.91   17.89   17.89   17.8775 17.84   17.84\n",
-      " 17.91   17.925  17.91   17.9145 17.92   17.91   17.9    17.91   17.915\n",
-      " 17.9165 17.915  17.915  17.91   17.91   17.84   17.8375 17.91   17.91\n",
-      " 17.91   17.89   17.89   17.8875 17.91   17.91   17.91   17.91   17.93\n",
-      " 17.9425 17.92   17.91   17.91   17.915  17.915  17.9245 17.91   17.915\n",
-      " 17.91   17.91   17.91   17.9155 17.92   17.91   17.91   17.91   17.91\n",
-      " 17.894  17.91   17.93   17.91   17.91   17.84   17.858  17.91   17.91\n",
-      " 17.91   17.91   17.91   17.7805 17.91   17.91   17.9575 17.89   17.89\n",
-      " 17.9    17.955  17.915  17.91   17.91   17.91   17.874  17.91   17.91\n",
-      " 17.935  17.91   17.91   17.8855 17.91   17.91   17.91   17.92   17.955\n",
-      " 17.9645 17.915  17.91   17.91   17.91   17.91   17.91   17.9599 17.91\n",
-      " 17.91   17.91   17.89   17.89   17.89   17.9587 17.91   17.91   17.92\n",
-      " 17.91   17.91   17.91   17.9175 17.9175 17.925  17.91   17.925  17.925\n",
-      " 17.925  17.91   17.91   17.91   17.925  17.89   17.89   17.89   17.9175\n",
-      " 17.925  17.91   17.89   17.89   17.89   17.89   17.69   17.66   17.6363\n",
-      " 17.67   17.68   17.65   17.65   17.67   17.68   17.6    17.6    17.6\n",
-      " 17.6    17.6    17.6375 17.6    17.6    17.585  17.54   17.54   17.54\n",
-      " 17.56   17.54   17.54   17.56   17.54   17.54   17.54   17.5125 17.545\n",
-      " 17.51   17.53   17.51   17.51   17.53   17.5325 17.52   17.46   17.47\n",
-      " 17.42   17.42   17.42   17.44   17.43   17.405  17.42   17.4    17.4\n",
-      " 17.4    17.3513 17.31   17.29   17.275  17.255  17.255  17.255  17.3\n",
-      " 17.3    17.305  17.32   17.33   17.33   17.33   17.33   17.335  17.32\n",
-      " 17.3325 17.31   17.31   17.31   17.3325 17.32   17.33   17.32   17.31\n",
-      " 17.31   17.31   17.2937 17.345  17.31   17.255  17.2025 17.2   ]\n"
+      "           Date   Price    Open    High     Low\n",
+      "5686  04-Nov-16  15.500  15.000  15.760  14.895\n",
+      "5687  05-Nov-16  15.550  15.500  15.850  15.200\n",
+      "5688  07-Nov-16  16.800  16.300  17.700  16.100\n",
+      "5689  08-Nov-16  18.000  17.450  18.100  16.250\n",
+      "5690  09-Nov-16  17.025  17.725  18.025  16.775\n",
+      "17.781465303430082\n",
+      "0.46929823320073366\n",
+      "Test MSE: 0.001\n"
      ]
     },
     {
@@ -94,7 +74,9 @@
     "plt.plot(working_data)\n",
     "pyplot.xlabel(\"Time\")\n",
     "pyplot.ylabel(\"USD price\")\n",
-    "\n",
+    "print(data.head(5))\n",
+    "print(np.mean(working_data))\n",
+    "print(np.std(working_data))\n",
     "\n",
     "dataframe = pandas.concat([working_data.shift(1), working_data], axis=1)\n",
     "dataframe.columns = ['t', 't+1']\n",
