--- a/Projects/capstone/final_project.ipynb
+++ b/Projects/capstone/final_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Ghandour\\Anaconda3\\envs\\Capstone enviroment\\lib\\site-packages\\ipykernel_launcher.py:22: DeprecationWarning: \n",
+      "C:\\Users\\Ghandour\\Anaconda3\\envs\\Capstone enviroment\\lib\\site-packages\\ipykernel_launcher.py:23: DeprecationWarning: \n",
       ".ix is deprecated. Please use\n",
       ".loc for label based indexing or\n",
       ".iloc for positional indexing\n",
@@ -63,6 +63,7 @@
     "from keras.layers import Dense\n",
     "from keras.layers import LSTM\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "data = pd.read_csv('USD_EGP Historical Data.csv')\n",
     "data=data.drop('Change %',axis=1)\n",
@@ -105,11 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#scaler = MinMaxScaler(feature_range=(0, 1))\n",
+    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
     "dataset = scaler.fit_transform(working_data.values.reshape(-1, 1))\n",
     "#print(dataset)\n",
     "\n",
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 75,
    "metadata": {
     "scrolled": true
    },
@@ -170,35 +171,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      " - 3s - loss: 0.0412 - acc: 0.0040\n",
-      "Epoch 2/10\n",
-      " - 1s - loss: 0.0067 - acc: 0.0040\n",
-      "Epoch 3/10\n",
-      " - 1s - loss: 0.0055 - acc: 0.0040\n",
-      "Epoch 4/10\n",
-      " - 1s - loss: 0.0043 - acc: 0.0040\n",
-      "Epoch 5/10\n",
-      " - 1s - loss: 0.0032 - acc: 0.0040\n",
-      "Epoch 6/10\n",
-      " - 1s - loss: 0.0024 - acc: 0.0040\n",
-      "Epoch 7/10\n",
-      " - 1s - loss: 0.0019 - acc: 0.0040\n",
-      "Epoch 8/10\n",
+      "Epoch 1/25\n",
+      " - 4s - loss: 0.0516 - acc: 0.0040\n",
+      "Epoch 2/25\n",
+      " - 1s - loss: 0.0059 - acc: 0.0040\n",
+      "Epoch 3/25\n",
+      " - 1s - loss: 0.0052 - acc: 0.0040\n",
+      "Epoch 4/25\n",
+      " - 1s - loss: 0.0042 - acc: 0.0040\n",
+      "Epoch 5/25\n",
+      " - 1s - loss: 0.0033 - acc: 0.0040\n",
+      "Epoch 6/25\n",
+      " - 1s - loss: 0.0026 - acc: 0.0040\n",
+      "Epoch 7/25\n",
+      " - 1s - loss: 0.0020 - acc: 0.0040\n",
+      "Epoch 8/25\n",
       " - 1s - loss: 0.0017 - acc: 0.0040\n",
-      "Epoch 9/10\n",
+      "Epoch 9/25\n",
       " - 1s - loss: 0.0016 - acc: 0.0040\n",
-      "Epoch 10/10\n",
-      " - 1s - loss: 0.0016 - acc: 0.0040\n"
+      "Epoch 10/25\n",
+      " - 1s - loss: 0.0015 - acc: 0.0040\n",
+      "Epoch 11/25\n",
+      " - 1s - loss: 0.0015 - acc: 0.0040\n",
+      "Epoch 12/25\n",
+      " - 1s - loss: 0.0015 - acc: 0.0040\n",
+      "Epoch 13/25\n",
+      " - 1s - loss: 0.0015 - acc: 0.0040\n",
+      "Epoch 14/25\n",
+      " - 1s - loss: 0.0015 - acc: 0.0040\n",
+      "Epoch 15/25\n",
+      " - 1s - loss: 0.0015 - acc: 0.0040\n",
+      "Epoch 16/25\n",
+      " - 1s - loss: 0.0015 - acc: 0.0040\n",
+      "Epoch 17/25\n",
+      " - 1s - loss: 0.0015 - acc: 0.0040\n",
+      "Epoch 18/25\n",
+      " - 1s - loss: 0.0015 - acc: 0.0040\n",
+      "Epoch 19/25\n",
+      " - 1s - loss: 0.0015 - acc: 0.0040\n",
+      "Epoch 20/25\n",
+      " - 1s - loss: 0.0015 - acc: 0.0040\n",
+      "Epoch 21/25\n",
+      " - 1s - loss: 0.0015 - acc: 0.0040\n",
+      "Epoch 22/25\n",
+      " - 1s - loss: 0.0015 - acc: 0.0040\n",
+      "Epoch 23/25\n",
+      " - 1s - loss: 0.0015 - acc: 0.0040\n",
+      "Epoch 24/25\n",
+      " - 1s - loss: 0.0015 - acc: 0.0040\n",
+      "Epoch 25/25\n",
+      " - 1s - loss: 0.0015 - acc: 0.0040\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1e0243af390>"
+       "<keras.callbacks.History at 0x1ce9deaf0f0>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,20 +239,39 @@
     "model.add(LSTM(1, input_shape=(1, look_back)))\n",
     "model.add(Dense(1))\n",
     "model.compile(loss='mean_squared_error', optimizer='adam', metrics=[\"accuracy\"])\n",
-    "model.fit(trainX, trainY, epochs=10, batch_size=1, verbose=2)"
+    "model.fit(trainX, trainY, epochs=25, batch_size=1, verbose=2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[17.9    17.9    17.9    17.83   17.8255 17.9    17.87   17.88   17.875\n",
+      " 17.875 ]\n",
+      "[[17.91  ]\n",
+      " [17.9   ]\n",
+      " [17.9   ]\n",
+      " [17.9   ]\n",
+      " [17.83  ]\n",
+      " [17.8255]\n",
+      " [17.9   ]\n",
+      " [17.87  ]\n",
+      " [17.88  ]\n",
+      " [17.875 ]]\n",
       "Train Score: 0.16 ModelMSE\n",
-      "Test Score: 0.05 ModelMSE\n"
+      "Test Score: 0.04 ModelMSE\n"
      ]
     }
    ],
@@ -234,6 +284,8 @@
     "trainY = scaler.inverse_transform([trainY])\n",
     "testPredict = scaler.inverse_transform(testPredict)\n",
     "testY = scaler.inverse_transform([testY])\n",
+    "print(testY[0,0:10])\n",
+    "print(scaler.inverse_transform(test[0:10]))\n",
     "# calculate root mean squared error\n",
     "trainScore = math.sqrt(mean_squared_error(trainY[0], trainPredict[:,0]))\n",
     "print('Train Score: %.2f ModelMSE' % (trainScore))\n",
